# heroicons-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust_build_test.yml
benches/: hypertext.rs  to_string.rs
heroicons_macros/: Cargo.toml
heroicons_macros/src/: lib.rs
src/: generated.rs  generated_from_icon_impl.rs  generated_icon_names.rs  lib.rs
src/hypertext/: hypertext_elements.rs  mod.rs
src/svg/: from_icon_impl_util.rs  mod.rs
tests/: hypertext.rs  strings.rs  test_utils.rs  to_string.rs
