[package]
name = "heroicons"
description = "Easily include Heroicons SVGs in Rust"
authors = ["Mattias Jansson <mattias.jansson@adabeat.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
documentatation = "https://docs.rs/heroicons"
repository = "https://github.com/dvaergiller/heroicons-rs"
homepage = "https://github.com/dvaergiller/heroicons-rs"


[dependencies]
hypertext = { version = "~0.12.1", optional = true }

[build-dependencies]
heroicons_macros = { version = "0.1.0", path = "heroicons_macros" }
pest = { version = "2.8.1", default-features = false }
pest_derive = "2.8.1"
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", default-features = false }

[dev-dependencies]
heroicons_macros = { path = "heroicons_macros" }
hypertext = { version = ">=0.12.1", default-features = false }
regex = { version = "1.11.2", default-features = false, features = ["unicode-perl"] }
syn = { version = "2.0.106", default-features = false }

[features]
default = ["hypertext"]
hypertext = ["dep:hypertext"]

[package.metadata.docs.rs]
all-features = true
