[package]
name = "heroicons_macros"
description = "Build and test helper macros for the heroicons crate"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", features = ["full", "parsing", "printing", "proc-macro"], default-features = false }
proc-macro2 = "1.0.101"
